# sEM-vr

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh
lda/: CMakeLists.txt  accumulator.h  base_lda.cpp  base_lda.h  bestscvb0.cpp  bestscvb0.h  bestscvb1.cpp  bestscvb1.h  cgs.cpp  cgs.h  clock.h  corpus.cpp  corpus.h  cvb0oem.cpp  cvb0oem.h  cvboem.cpp  cvboem.h  cvsEM.cpp  cvsEM.h  dslda.cpp  dslda.h  em.cpp  em.h  empirical.cpp  flags.cpp  flags.h  gd.cpp  gd.h  goem.cpp  goem.h  icvboem.cpp  icvboem.h  main.cpp  mfvoem.cpp  mfvoem.h  ncvboem.cpp  ncvboem.h  rsgd.cpp  rsgd.h  scvb0.cpp  (+13 more)
scripts/: analyze_perplexity.py  analyze_ppl.py  convert_data.py  draw.py  draw_new.py  runall.py
